# fantom-rust-vm

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  Makefile  README.md
client/: Cargo.toml
client/src/: cli.yml  main.rs
client/src/accounts/: account.rs  handler.rs  mod.rs
client/src/blocks/: mod.rs  receipt.rs
client/src/keys/: mod.rs
client/src/servers/: discovery.rs  general.rs  mod.rs  rpc.rs
client/src/servers/web/: mod.rs
client/src/servers/web/handlers/: mod.rs
client/tests/: genesis.json
docs/solc/contracts/: Greeter.sol
docs/solc/contracts/outputDirectory/: Greeter.evm  Greeter.sol.ast  Mortal.evm
fvm/: Cargo.toml
fvm/src/: account.rs  errors.rs  eth_log.rs  gas_prices.rs  lib.rs  main.rs  memory.rs  opcodes.rs  storage.rs  vm.rs
fvm/tests/: integration_tests.rs
templates/: genesis.json
world/: Cargo.toml
world/src/: account.rs  chain.rs  db.rs  lib.rs  transaction.rs
world/src/blocks/: genesis.rs  mod.rs  receipt.rs
world/src/consensus/: dag.rs  ethash.rs  miller_rabin.rs  miner.rs  mod.rs
world/src/transactions/: mod.rs  pool.rs
